--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -67,3 +67,11 @@ $callouts: (
         }
     }
 }
+
+.label {
+    font-size: 9px;
+    padding-bottom: 0.05em;
+    padding-top: 0.05em;
+    margin-bottom: 0;
+    margin-left: 0;
+}
