--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,7 +77,7 @@ layout: table_wrappers
                   {% endif %}
                   {{ site.license_name }}{% if site.license_url != nil %}</a>{% endif %}.</p>
               {% endif %}
-            <img width="170px" style="padding-bottom:15px;" align="middle" src="{{site.baseurl}}/assets/images/rc-logo.png" >
+            <img width="170px" style="padding-bottom:15px;" align="middle" src="{{site.baseurl}}/assets/images/SILDLS-logo.png" >
             </div>
         </footer>
 </div>
